unpackaged/main/default/objects/Exception_Log__c/fields/Exception_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>