unpackaged/main/default/objects/Exception_Log__c/fields/Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>Exception_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>