unpackaged/main/default/objects/Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>