unpackaged/main/default/objects/Exception_Log__c/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trigger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>