unpackaged/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Exception_Description__c</columns>
    <columns>Exception_Details__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Exception_Code__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Source_Integration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>